# hpo-project

./: .gitignore  README.md  azure-pipelines.yml  obproject.toml  pyproject.toml
.github/workflows/: deploy.yml
data/hpo_results/: asset_config.toml
data/iris_dataset/: asset_config.toml
deployments/optuna-dashboard/: config.yml  main.py
deployments/optuna_dashboard/: config.yml
flows/nn/: config.json  flow.py  hpo_client.py  interactive.ipynb  objective_fn.py  obproject.toml  utils.py
flows/tree/: config.json  flow.py  hpo_client.py  interactive.ipynb  objective_fn.py  utils.py
models/iris_classifier/: asset_config.toml
models/tree_classifier/: asset_config.toml
